# dioxus-i18n

./: Cargo.toml  README.md
examples/: dioxus-desktop.rs  freya.rs
src/: i18n_macro.rs  lib.rs  tanslate.rs  use_i18n.rs  use_init_i18n.rs
